# bilradio-transcriper

./: .gitignore  HANDOVER.md  Prompt to create improved JSON.txt  README.md  pyproject.toml
.cursor/rules/: agent-run-commands.mdc  git-commit-push.mdc  github-pages-deploy.mdc  pipelines.mdc  transcript-storage.mdc  ui-language.mdc  venv-whisper-pip.mdc  web-restart-after-changes.mdc
.github/workflows/: pages.yml
bilradio/: __init__.py  audio_meta.py  bootstrap_improved.py  cli.py  config.py  db.py  download.py  episode_cleanup.py  episode_paths.py  export_pages.py  extract.py  improve_transcripts.py  improved_json_prune.py  pipeline.py  prepare_improved_agent.py  rss_feed.py  runtime_log.py  short_episode_purge.py  time_format.py  transcript_text.py  whisper_run.py
bilradio/web/: __init__.py  app.py
bilradio/web/static/: style.css
bilradio/web/templates/: episodes.html  index.html  queue.html  topics.html
docs/: CNAME  episodes.html  index.html
docs/api/: bullets.json  episodes.json  facets.json
docs/topics/: index.html
scripts/: apply_whisper_timecodes.py  batch_whisper_transcribe.py  cuda_transcribe_smoke.py  episode_cleanup.py  improved_json_from_segments.py  reset_episode_error.py
